syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2020 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";

/* Wipes the provided amount of tokens from the specified Account. Must be signed by the Token's Wipe key.
 If Wipe Key is not present in the Token, transaction results in TOKEN_HAS_NO_WIPE_KEY.
 If the provided account is the Token's Treasury Account, transaction results in CANNOT_WIPE_TOKEN_TREASURY_ACCOUNT
 If the provided account does not Token relation, transaction results in ACCOUNT_HAS_NO_TOKEN_RELATIONSHIP.
 On success, tokens are removed from the account and the total supply of the token is decreased by the wiped amount.
 */
message TokenWipeAccountTransactionBody {
    TokenRef token = 1; // The token for which the account will be wiped. If token does not exist, transaction results in INVALID_TOKEN_ID
    AccountID account = 2; // The account to be wiped
    uint64 amount = 3; // The amount of tokens to wipe from the specified account. Amount must be a positive non-zero number, not bigger than the token balance of the account (0; balance]
}
